# komposos-grid

./: .gitignore  BRAINSTORM_NEXT_LEVEL.md  CLAUDE.md  CLAUDE_OPUS_ANALYSIS.md  FIVE_LAYER_ARCHITECTURE.md  GEMINI.md  GRAND_INTEGRATION_PLAN.md  INFINITY_COSMOS_INTEGRATION_BLUEPRINT.md  LICENSE  LICENSE-COMMERCIAL  MASTER_MANUAL.md  ORION_COMPARISON.md  PLATFORM_PROTOCOL_DESIGN.md  REPRODUCE.md  RULIAD_IMPLEMENTATION_ROADMAP.md  SYSTEM_ANALYSIS.md  SYSTEM_AUDIT.md  THE_DEFINITIVE_GUIDE.md  TRANSFORMATIVE_POSSIBILITIES.md  WESYS_VISION_AND_ROADMAP.md  __init__.py  _compat_loader.py  architecture.md  domain_core.py  ecosystem_registry.json  kid-fun-adventure-math-book.md  optimus_core.py  pyproject.toml  requirements.txt  sitecustomize.py  streamlit_app.py  the-story-that-is-a-category.md  user-guide.md
.claude/: settings.local.json
.streamlit/: config.toml
archive/: COG_VS_ORION.md  IMPLEMENTATION_COMPLETE.md  OPTIMUS_Master_Plan.docx  OPTIMUS_RULIAD_INTEGRATION_ANALYSIS.md  OPTION3_PLAN.md  ORION_ATTRIBUTION.md  The ruliad engine.md  architecture.md  user-guide.md
bridges/: __init__.py  cog_reasoning.py  knowledge_manager.py  optimus_plugin.py  session_manager.py  telemetry_plugin.py
categorical/: __init__.py  boundary_profunctor.py  cellular_automata.py  crypto_category.py  enriched_category.py  grothendieck.py  kan_extensions.py  natural_transformations.py  operads.py  presheaf_topos.py  prime_theory.py  topos_logic.py  two_categories.py
cog/: __init__.py  __main__.py  energy.py  engine.py  router.py  schema.py  security.py  serializers.py  server.py  (+2 more)
(+479 files in other folders)
