[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "komposos-iv"
version = "0.1.0"
description = "KOMPOSOS-IV: The Fused Categorical Runtime"
readme = "README.md"
license = {text = "Apache-2.0 OR LicenseRef-Proprietary-Commercial"}
requires-python = ">=3.10"
authors = [
    {name = "James Ray Hawkins", email = "jhawk314@gmail.com"}
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["core*"]
